Fri Sep 14 00:20:00 2012  Zachary Scott  <zzak@ruby-lang.org>

	* signal.c (rb_f_kill):
	  Update documentation for Process.kill to reflect kill(2)
	  Patch by Richo Healey

Thu Sep 13 21:40:49 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* lib/securerandom.rb (SecureRandom.random_bytes):
	  Use 64bit value as pointer for Windows x64 to fix SystemCallError.

	* lib/securerandom.rb (SecureRandom.lastWin32ErrorMessage):
	  Set proper encoding to avoid invalid byte sequence error.
	  [ruby-core:47451] [Bug #6990]

Thu Sep 13 11:20:00 2012  Zachary Scott  <zzak@ruby-lang.org>

	* lib/optparse.rb: Remove unreachable email address from documentation
	  [Bug #6996] [ruby-core:47459]

Thu Sep 13 11:20:00 2012  Zachary Scott  <zzak@ruby-lang.org>

	* lib/xmlrpc.rb: Documentation for XMLRPC
	* lib/xmlrpc/datetime.rb: ditto.
	* lib/xmlrpc/parser.rb: ditto.
	* lib/xmlrpc/client.rb: ditto.
	* lib/xmlrpc/utils.rb: ditto.
	* lib/xmlrpc/README.rdoc: ditto.
	* lib/xmlrpc/create.rb: ditto.
	* lib/xmlrpc/base64.rb: ditto.
	* lib/xmlrpc/config.rb: ditto.
	* lib/xmlrpc/httpserver.rb: ditto.
	* lib/xmlrpc/server.rb: ditto.
	* lib/xmlrpc/marshal.rb: ditto.
	* lib/xmlrpc/README.txt: ditto.
	  [Bug #6909] [ruby-core:47286]

Thu Sep 13 10:22:11 2012  Takashi Toyoshima  <toyoshim@gmail.com>

	* configure.in: Don't use PIE on Haiku because loader support is not
	  enough.

Thu Sep 13 08:20:00 2012  Zachary Scott  <zzak@ruby-lang.org>

	* lib/shellwords.rb: Documentation for Shellwords.

Thu Sep 13 08:00:00 2012  Zachary Scott  <zzak@ruby-lang.org>

	* ext/ripper/lib/ripper.rb: Documentation for Ripper.
	* ext/ripper/lib/ripper/lexer.rb: ditto.
	* ext/ripper/lib/ripper/sexp.rb: ditto.
	* ext/ripper/lib/ripper/filter.rb: ditto.
	* ext/ripper/lib/ripper/core.rb: ditto.
	  [Bug #6929] [ruby-core:47309]

Wed Sep 12 22:59:07 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_method_missing, vm_call_method): reuse arguments
	  on the VM stack and get rid of ALLOCA.
